# TalkToWhisper

./: HOW_IT_WORKS_AND_OPTIMIZATION.md  README.md  settings.gradle.kts  setup_whisper_cpp.sh
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/whisper/: MainActivity.kt  TalkToWhisperApplication.kt
app/src/main/java/com/example/whisper/audio/processing/: AudioCaptureManager.kt  AudioChunk.kt  AudioConfig.kt  AudioFocusManager.kt  AudioPermissionHelper.kt  VoiceActivityDetector.kt
app/src/main/java/com/example/whisper/audio/recognition/: RecognitionResult.kt  SpeechRecognizer.kt  WhisperCppConfig.kt  WhisperCppLib.kt  WhisperCppRecognizer.kt  WhisperCpuConfig.kt
app/src/main/java/com/example/whisper/di/: AudioModule.kt  SpeechRecognitionModule.kt
app/src/main/java/com/example/whisper/modelmanager/downloader/: ModelDownloader.kt
app/src/main/java/com/example/whisper/modelmanager/storage/: ModelStorage.kt
app/src/main/java/com/example/whisper/presentation/screens/home/: TalkToWhisperScreen.kt
app/src/main/java/com/example/whisper/presentation/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/java/com/example/whisper/presentation/viewmodels/: WhisperViewModel.kt
app/src/main/jni/whisper/: CMakeLists.txt  jni.c
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-el/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
